# graphic_graphic_2d

./: .clang-format  .gitignore  0007-update-rs-surface.patch  22899.diff:Zone.Identifier  2d.patch  3717.diff  3717.diff.txt:Zone.Identifier  AGENTS.md  BUILD.gn  CLAUDE.md  HgmFrameRateManager_分析.md  README_zh.md  ace_platforms.gni  bundle.json  copy_arkui_adapters.py  graphic.cfg  graphic_config.gni  hisysevent.yaml  main.diff  ohos.build  xxb.patch
.claude/: settings.local.json
.gitcode/: CODEOWNERS
.gitee/: CODEOWNERS
docs/knowledge/: README.md  behind-window-filter.md  capture.md  hdr.md  hyper-graphic-manager.md  pixelmap-from-surface.md  rs-animation.md  rs-color-picker-thread.md  rs-main-thread.md  rs-ng-effect-framework.md  rs-ui-effect.md
etc/: graphic.para.dac
frameworks/aps_monitor/include/: iaps_plugin.h
frameworks/bootanimation/: BUILD.gn
frameworks/bootanimation/include/: boot_animation.h  boot_animation_config.h  boot_animation_strategy.h  boot_compile_progress.h  boot_player.h  util.h
frameworks/bootanimation/src/: boot_animation.cpp  boot_animation_controller.cpp  boot_animation_operation.cpp  boot_associative_display_strategy.cpp  boot_compatible_display_strategy.cpp  boot_compile_progress.cpp  boot_independent_display_strategy.cpp  boot_picture_player.cpp  boot_video_player.cpp  boot_videoplayer.cpp  main.cpp  util.cpp
frameworks/bootanimation/utils/: BUILD.gn
frameworks/dumper/: BUILD.gn
frameworks/dumper/src/: graphic_dumper_helper.cpp
frameworks/opengl_wrapper/: BUILD.gn  EGL.versionscript
frameworks/opengl_wrapper/src/: hook.h  thread_private_data_ctl.cpp  thread_private_data_ctl.h  wrapper_log.h
frameworks/opengl_wrapper/test/: BUILD.gn  opengl_wrapper_native_test.cpp
frameworks/surface/: BUILD.gn  bundle.json
frameworks/surface/include/: buffer_client_producer.h  buffer_log.h  buffer_queue.h  buffer_queue_producer.h  consumer_surface.h  egl_manager.h  native_window.h  producer_surface.h  surface_buffer_impl.h
frameworks/surface/src/: buffer_client_producer.cpp  buffer_manager.cpp  buffer_queue.cpp  buffer_queue_consumer.cpp  buffer_queue_producer.cpp  buffer_utils.cpp  consumer_surface.cpp  egl_consumer_surface.cpp  egl_data_impl.cpp  egl_manager.cpp  native_buffer.cpp  native_window.cpp  producer_egl_surface.cpp  producer_surface.cpp  surface.cpp  surface_buffer_impl.cpp
frameworks/surfaceimage/: BUILD.gn
frameworks/surfaceimage/include/: surface_image.h
frameworks/surfaceimage/src/: native_image.cpp  surface_image.cpp
frameworks/text/: BUILD.gn
frameworks/text/service/: BUILD.gn
frameworks/vsync/: BUILD.gn
frameworks/vsync/include/: vsync_helper_impl.h
frameworks/vsync/src/: vsync_helper_impl.cpp
frameworks/vulkan_layers/: BUILD.gn
frameworks/vulkan_layers/swapchain_layer/: swapchain_layer.cpp
frameworks/vulkan_layers/test/: BUILD.gn
frameworks/vulkan_wrapper/: BUILD.gn
frameworks/vulkan_wrapper/include/: driver_loader.h
frameworks/vulkan_wrapper/src/: driver.cpp  driver_loader.cpp  swapchain.cpp
frameworks/vulkan_wrapper/test/: vulkan_wrapper_native_test.cpp
frameworks/wm/: BUILD.gn
frameworks/wm/include/: subwindow_normal_impl.h  subwindow_video_impl.h  window_impl.h  wl_buffer_cache.h
frameworks/wmtest/: BUILD.gn
graphic_test/graphic_test/: BUILD.gn
graphic_test/graphic_test_framework/: BUILD.gn
graphic_test/test/: BUILD.gn
rosen/modules/2d_engine/rosen_text/: BUILD.gn
rosen/modules/2d_engine/rosen_text/adapter/common/: hm_symbol_txt.cpp  text_style.cpp
rosen/modules/2d_engine/rosen_text/adapter/skia_txt/: convert.cpp  convert.h  custom_symbol_config.cpp  custom_symbol_config.h  font_collection.cpp  font_collection.h  typography.cpp  typography.h  typography_create.cpp  typography_create.h
rosen/modules/2d_engine/rosen_text/adapter/texgine/: convert.cpp  font_collection.cpp  typography.h
rosen/modules/2d_engine/rosen_text/adapter/txt/: convert.cpp  font_collection.cpp  typography.cpp
rosen/modules/2d_engine/rosen_text/export/rosen_text/: font_collection.h  hm_symbol_txt.h  symbol_animation_config.h  text_style.h  typography.h  typography_create.h  typography_style.h
rosen/modules/2d_engine/rosen_text/properties/: font_collection_txt.cpp  rosen_converter_txt.cpp  text_style.h  typography_style.h
rosen/modules/2d_engine/rosen_text/skia_txt/: BUILD.gn
rosen/modules/2d_engine/rosen_text/skia_txt/common_utils/: string_util.cpp  string_util.h
rosen/modules/2d_engine/rosen_text/skia_txt/impl/: drawing_painter_impl.cpp  paragraph_builder_impl.cpp  paragraph_impl.cpp  paragraph_impl.h
rosen/modules/2d_engine/rosen_text/skia_txt/symbol_engine/: hm_symbol_node_build.cpp  hm_symbol_run.cpp  hm_symbol_run.h  hm_symbol_txt.cpp  hm_symbol_txt.h
rosen/modules/2d_engine/rosen_text/skia_txt/symbol_resource/: symbol_config_parser.cpp  symbol_config_parser.h
rosen/modules/2d_engine/rosen_text/skia_txt/txt/: line_metrics.h  paint_record.h  paragraph.h  platform.cpp  platform.h  text_bundle_config_parser.cpp  text_style.h  typeface_font_asset_provider.cpp
rosen/modules/2d_engine/rosen_text/ui/: BUILD.gn
rosen/samples/: README.md
rosen/test/render_service/render_service/unittest/feature/hwc/hpae_offline/: BUILD.gn  rs_gpu_offline_buffer_test.cpp  rs_gpu_offline_device_test.cpp  rs_hpae_offline_thread_manager_test.cpp  rs_render_layer_test.cpp
text/: BUILD.gn
utils/: BUILD.gn
utils/buffer_handle/: BUILD.gn
utils/color_manager/: BUILD.gn
utils/gslogger/: BUILD.gn
utils/log/: rs_trace.h  rs_trace_crossplatform.h
utils/metadata_manager/: BUILD.gn
utils/metadata_manager/test/unittest/: BUILD.gn  metadata_manager_test.cpp
utils/raw_parser/: BUILD.gn
utils/scoped_bytrace/: BUILD.gn
utils/socketpair/: BUILD.gn
utils/sync_fence/: BUILD.gn
utils/vulkan_shell/: vulkan_application.cpp  vulkan_application.h  vulkan_backbuffer.cpp  vulkan_backbuffer.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_debug_report.h  vulkan_device.h  vulkan_handle.h  vulkan_proc_table.cpp  vulkan_proc_table.h  vulkan_swapchain.cpp  vulkan_window.cpp  vulkan_window.h
(+3770 files in other folders)
