# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_out_path = "graphic_2d/utils/metadata_manager"

group("unittest") {
  testonly = true
  deps = [ ":MetadataManagerTest" ]
}

## Build metadata_manager_test
ohos_unittest("MetadataManagerTest") {
  module_out_path = module_out_path
  sources = [ "metadata_manager_test.cpp" ]
  deps = [ ":metadata_manager_test_common" ]
}

config("metadata_manager_test_config") {
  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]
}

ohos_static_library("metadata_manager_test_common") {
  visibility = [ ":*" ]
  testonly = true
  public_configs = [ ":metadata_manager_test_config" ]

  public_deps = [
    "//foundation/graphic/graphic_2d/utils/metadata_manager:metadata_manager",
    "//third_party/googletest:gtest_main",
  ]
  external_deps = [
    "drivers_interface_display:display_commontype_idl_headers",
    "hilog:libhilog",
  ]
  subsystem_name = "graphic"
  part_name = "graphic_2d"
}
